--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 href="#" target="_blank">Hire Me</a>
             </div>
             <div class="half-width">
-                <img src="/images/jhankar.png" alt="">
+                <img src="images/jhankar.png" alt="">
             </div>
     </section>
 
     <section class="dream-area">
         <div class="half-width">
-            <img src="/images/jhankar2.png" alt="">
+            <img src="images/jhankar2.png" alt="">
         </div>
         <div class="half-width">
             <h3><span class="text">Big Dream</span>
