make some changes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <img src="images/jhankar2.png" alt="">
         </div>
         <div class="half-width">
-            <h3><span class="text">Big Dream</span>
+            <h3><span class="text">Big Dream To</span>
             </h3>
-            <h3>Become A World Class <span class="orange-highlight">Web Developer</span></h3>
+            <h3 class="text">Become A World Class <span class="orange-highlight">Web Developer</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iste dolore molestias culpa, vitae iure omnis expedita! Laboriosam rerum ipsam vel iure. Voluptas ut doloremque explicabo labore, iure dolor delectus!</p>
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>     
